# rag-cli-tool

./: .env.example  .gitignore  README.md  pyproject.toml
src/llm_core/: __init__.py  config.py  retry.py
src/llm_core/providers/: __init__.py  openai.py
src/rag_cli/: __init__.py  cli.py  console.py
src/rag_core/: __init__.py
src/rag_core/chunking/: __init__.py  base.py  recursive.py
src/rag_core/embeddings/: __init__.py  base.py  ollama.py  openai.py
src/rag_core/loaders/: __init__.py  documents.py
src/rag_core/retrieval/: __init__.py  base.py  similarity.py
src/rag_core/vectorstores/: __init__.py  base.py  chroma.py
tests/test_llm_core/: test_anthropic_provider.py  test_config.py  test_model_parsing.py  test_ollama_provider.py  test_openai_provider.py  test_retry.py
tests/test_rag_core/: test_chunking.py  test_embeddings.py  test_loaders.py  test_ollama_embeddings.py  test_retrieval.py  test_vectorstore.py
