[project]
name = "rag-cli-tool"
version = "0.1.0"
description = "CLI tool for RAG over local documents"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Lukasz Grochal" }
]
keywords = ["rag", "cli", "ollama", "embeddings", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Console",
]
dependencies = [
    # CLI
    "typer>=0.9.0",
    "rich>=13.0.0",

    # llm_core
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "ollama>=0.4.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",

    # rag_core
    "chromadb>=0.4.0",
    "pypdf>=3.0.0",
    "docx2txt>=0.8",
]

[project.scripts]
rag-cli = "rag_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_cli", "src/llm_core", "src/rag_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
